Ajout retrait hausses messages d'avertissement en rouge

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -514,7 +514,8 @@ ajouterHausses=Ajouter des hausses
 selecthaussesretirer=Sélectionner les hausses à retirer
 selecthaussesajouter=Sélectionner les hausses à ajouter
 AffTtHausse=Afficher toutes les hausses. Si vous ajoutez des hausses dont l'essaim ou le rucher ne sont pas renseignés, il faudra compléter les hausses de récolte pour avoir des statistiques de production correctes.
-ToutesH=Toutes les hausses
+AffToutes=Afficher toutes
+AffToutesH=Afficher toutes les hausses
 
 # recolte/recolteHausseForm.html
 plus=Plus
@@ -594,7 +595,7 @@ retirerreordonnerHausses=Retirer Réordonner (glisser-déposer)
 # ruche/rucheHausseForm.html
 hausseXX=Hausse {0}
 ajoutSurLaruche=Ajout sur la ruche {0}
-retraitDeLaruche=Attention cette hausse sera retirée de la ruche {0}
+retraitDeLaruche=Attention cette hausse sera retirée de la
 
 # ruchetype/rucheTypesListe.html
 rucheType=Type de ruche
@@ -699,6 +700,7 @@ nb=Nb
 etat=État
 destProv=Dest/Prov
 grouper=Grouper
+grouperJour=Grouper par jour
 Ajout=Ajout
 Retrait=Retrait
 
