--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -514,7 +514,8 @@ ajouterHausses=Add supers
 selecthaussesretirer=Select supers to remove
 selecthaussesajouter=Select supers to add
 AffTtHausse=Show all supers. If you add supers for which the swarm or the apiary are not indicated, it will be necessary to complete the harvest supers to have correct production statistics.
-ToutesH=All supers
+AffToutes=Show all
+AffToutesH=Show all supers
 
 # recolte/recolteHausseForm.html
 plus=More
@@ -594,7 +595,7 @@ retirerreordonnerHausses=Remove - reorder supers
 # ruche/rucheHausseForm.html
 hausseXX=Super {0}
 ajoutSurLaruche=Add on hive {0}
-retraitDeLaruche=This super will be removed from the  {0} hive
+retraitDeLaruche=This super will be removed from the
 
 # ruchetype/rucheTypesListe.html
 rucheType=Hive type
@@ -699,6 +700,7 @@ nb=Nb
 etat=State
 destProv=To/From
 grouper=Group
+grouperJour=Group by day
 Ajout=Addition
 Retrait=Withdrawal
 
