rucher graphique tranhumance ajout récoltes

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -672,6 +672,7 @@ rucherEves=Ce rucher ne peut être supprimé, il est référencé par des évén
 supprimercerucher?=Supprimer ce rucher ?
 historique=Historique
 transhumances=Transhumances
+graphTransh=Graphique transhumances
 poidsVide=Poids
 nbCadres=Cadres
 rucher=Rucher
