--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -672,6 +672,7 @@ rucherEves=This apiary cannot be deleted, it is used in events
 supprimercerucher?=Delete this apiary?
 historique=History
 transhumances=Transhumances
+graphTransh=Transhumances graph
 poidsVide=Weight
 nbCadres=Frames
 rucher=Apiary
