essaimAssociationForm.html affichage plus complet, si dépot case cochée

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -310,7 +310,8 @@ commentaireLot=Add a comment to the batch
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Exchange positions of hives {0} and {1}
-positionRuches=Hive {0} is in apiary {1}
+positionRuches=Hive {0}, empty, is in apiary {1}
+positionRuchesE=Hive {0}, swarm {1}, is in apiary {2}
 
 AttentionDipersion=Attention save will disperse the swarm {0}
 association=Association
