--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -310,7 +310,9 @@ commentaireLot=Ajout d'un commentaire au lot
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
-positionRuches=La ruche {0} est dans le rucher {1}
+positionRuches=La ruche {0}, vide, est dans le rucher {1}
+positionRuchesE=La ruche {0}, essaim {1}, est dans le rucher {2}
+
 
 AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
 association=Association
