--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -312,11 +312,14 @@ commentaireLot=Ajout d'un commentaire au lot
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 positionRuches=La ruche {0}, vide, est dans le rucher {1}
 positionRuchesE=La ruche {0}, essaim {1}, est dans le rucher {2}
-
-
+Lessaim=L'essaim
+resteEnPlace=reste en place
+estDeplace=est déplacé
 AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
 association=Association
 avecEssaims=Ruches avec essaim
+videDansLeRuher=vide dans le rucher
+dansLeRucher=dans le rucher
 
 # essaim/essaimSucreForm.html
 ajoutSucre=Ajout de sucre 
