--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -312,10 +312,14 @@ commentaireLot=Add a comment to the batch
 echangePositionsRuches=Exchange positions of hives {0} and {1}
 positionRuches=Hive {0}, empty, is in apiary {1}
 positionRuchesE=Hive {0}, swarm {1}, is in apiary {2}
-
+Lessaim=The swarm
+resteEnPlace=stays in place
+estDeplace=is moved
 AttentionDipersion=Attention save will disperse the swarm {0}
 association=Association
 avecEssaims=Ruches avec essaim
+videDansLeRuher=empty in the apiary
+dansLeRucher=in the apiary
 
 # essaim/essaimSucreForm.html
 ajoutSucre=Add sugar 
