essaimAssociationForm.html externalisation js

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -320,6 +320,8 @@ association=Association
 avecEssaims=Ruches avec essaim
 videDansLeRuher=vide dans le rucher
 dansLeRucher=dans le rucher
+etatEnregistre=Si vous enregistrez vous aurez l'état suivant :
+disperse=dispersé
 
 # essaim/essaimSucreForm.html
 ajoutSucre=Ajout de sucre 
