--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -320,6 +320,8 @@ association=Association
 avecEssaims=Ruches avec essaim
 videDansLeRuher=empty in the apiary
 dansLeRucher=in the apiary
+etatEnregistre=If you save you will have the following state:
+disperse=dispersed
 
 # essaim/essaimSucreForm.html
 ajoutSucre=Add sugar 
