essaim origine de la reine, attention ajout champ origine en bd

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -34,6 +34,18 @@ ESSAIMDISPERSION=Dispersion de l'essaim
 RUCHEPESEE=Poids de la ruche
 RUCHECADRE=Cadres de la ruche
 
+# enum essaim/ReineOrigine.java
+AEC=Achat essaim sur cadre
+AEN=Achat essaim nu
+ARE=Achat reine en cagette
+ENN=Capture d'un essaim naturel nu
+ENR=Capture d'un essaim naturel installé avec rayon
+AUR=Auto enruchement d'un essaim naturel
+EAN=Essaim artificiel avec élevage naturel
+CRD=Cellule royale à dix jours
+CR3=Cellule royale à trois jours
+CUP=Cupule implantée dans un essaim
+
 # ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
 PasDeRucheCree=Pas de ruche créée
@@ -219,6 +231,7 @@ EssaimsProd=Essaims production
 # essaimForm.html
 dateDispersion=Date de dispersion
 commDisp=Commentaire dispersion
+origine=Origine
 
 # essaimGrapheEve.html
 ZoomIni=Zoom initial
