--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -34,6 +34,18 @@ ESSAIMDISPERSION=Swarm dispersing
 RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 
+# enum essaim/ReineOrigine.java
+AEC=Swarm on frame purchased
+AEN=Bare swarm purchased
+ARE=Queen in crate purchased
+ENN=Bare natural swarm captured
+ENR=Natural swarm captured with honeycomb
+AUR=Self inhive of a natural swarm
+EAN=Artificial swarm with natural breeding
+CRD=Royal cell at ten days
+CR3=Royal cell at three days
+CUP=Cup implanted in a swarm
+
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
 PasDeRucheCree=No hive created
@@ -219,6 +231,7 @@ EssaimsProd=Swarms production
 # essaimForm.html
 dateDispersion=Dispersion date
 commDisp=Dispersion comment
+origine=Origin
 
 # essaimGrapheEve.html
 ZoomIni=Initial zoom
