origine des essaims, détail et liste essaim

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -35,16 +35,22 @@ RUCHEPESEE=Poids de la ruche
 RUCHECADRE=Cadres de la ruche
 
 # enum essaim/ReineOrigine.java
-AEC=Achat essaim sur cadre
-AEN=Achat essaim nu
-ARE=Achat reine en cagette
-ENN=Capture d'un essaim naturel nu
-ENR=Capture d'un essaim naturel installé avec rayon
-AUR=Auto enruchement d'un essaim naturel
-EAN=Essaim artificiel avec élevage naturel
-CRD=Cellule royale à dix jours
-CR3=Cellule royale à trois jours
-CUP=Cupule implantée dans un essaim
+AEC=AEC Achat Essaim sur cadre
+AEN=AEN Achat Essaim nu
+ARF=ARF Achat reine
+ARV=ARV Achat reine vierge
+ENN=ENN Essaim naturel
+ENB=ENB Essaim naturel bâti
+AUR=AUR Auto enruchement
+EAN=EAN Essaim artificiel avec élevage naturel
+CRD=CRD Cellule royale dix j
+CR3=CR3 Cellule royale 3 j
+CR0=CR0 Cellule royale 0 j
+RVN=RVN Reine vierge
+CRE=CRE Cellule de réémergence
+ESS=ESS Essaimage
+SUP=SUP Supercédure
+SAU=SAU Sauveté
 
 # ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
