--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -35,16 +35,22 @@ RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 
 # enum essaim/ReineOrigine.java
-AEC=Swarm on frame purchased
-AEN=Bare swarm purchased
-ARE=Queen in crate purchased
-ENN=Bare natural swarm captured
-ENR=Natural swarm captured with honeycomb
-AUR=Self inhive of a natural swarm
-EAN=Artificial swarm with natural breeding
-CRD=Royal cell at ten days
-CR3=Royal cell at three days
-CUP=Cup implanted in a swarm
+AEC=AEC Achat Essaim sur cadre
+AEN=AEN Achat Essaim nu
+ARF=ARF Achat reine
+ARV=ARV Achat reine vierge
+ENN=ENN Essaim naturel
+ENB=ENB Essaim naturel bâti
+AUR=AUR Auto enruchement
+EAN=EAN Essaim artificiel avec élevage naturel
+CRD=CRD Cellule royale dix j
+CR3=CR3 Cellule royale 3 j
+CR0=CR0 Cellule royale 0 j
+RVN=RVN Reine vierge
+CRE=CRE Cellule de réémergence
+ESS=ESS Essaimage
+SUP=SUP Supercédure
+SAU=SAU Sauveté
 
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
