--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -35,22 +35,22 @@ RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 
 # enum essaim/ReineOrigine.java
-AEC=AEC Achat Essaim sur cadre
-AEN=AEN Achat Essaim nu
-ARF=ARF Achat reine
-ARV=ARV Achat reine vierge
-ENN=ENN Essaim naturel
-ENB=ENB Essaim naturel bâti
-AUR=AUR Auto enruchement
-EAN=EAN Essaim artificiel avec élevage naturel
-CRD=CRD Cellule royale dix j
-CR3=CR3 Cellule royale 3 j
-CR0=CR0 Cellule royale 0 j
-RVN=RVN Reine vierge
-CRE=CRE Cellule de réémergence
-ESS=ESS Essaimage
-SUP=SUP Supercédure
-SAU=SAU Sauveté
+AEC=AEC Swarm on frame purchased
+AEN=AEN Bare swarm purchased
+ARF=ARF Queen purchased
+ARV=ARV Bare queen purchased
+ENN=ENN Natural swarm
+ENB=ENB Natural swarm with honeycomb
+AUR=AUR Self inhive
+EAN=EAN Artificial swarm with natural breeding
+CRD=CRD Royal cell ten days
+CR3=CR3 Royal cell three days
+CR0=CR0 Royal cell zero day
+RVN=RVN Bare queen
+CRE=CRE Re-emergence cell
+ESS=ESS Swarming
+SUP=SUP Supercedure
+SAU=SAU Rescued
 
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
