essaim sortie : Essaimage, Dispersion...

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -34,24 +34,6 @@ ESSAIMDISPERSION=Dispersion de l'essaim
 RUCHEPESEE=Poids de la ruche
 RUCHECADRE=Cadres de la ruche
 
-# enum essaim/ReineOrigine.java
-AEC=AEC Achat Essaim sur cadre
-AEN=AEN Achat Essaim nu
-ARF=ARF Achat reine
-ARV=ARV Achat reine vierge
-ENN=ENN Essaim naturel
-ENB=ENB Essaim naturel bâti
-AUR=AUR Auto enruchement
-EAN=EAN Essaim artificiel avec élevage naturel
-CRD=CRD Cellule royale dix j
-CR3=CR3 Cellule royale 3 j
-CR0=CR0 Cellule royale 0 j
-RVN=RVN Reine vierge
-CRE=CRE Cellule de réémergence
-ESS=ESS Essaimage
-SUP=SUP Supercédure
-SAU=SAU Sauveté
-
 # ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
 PasDeRucheCree=Pas de ruche créée
@@ -235,9 +217,39 @@ ArbreInactif=Arbre inactif
 EssaimsProd=Essaims production
 
 # essaimForm.html
-dateDispersion=Date de dispersion
-commDisp=Commentaire dispersion
+dateDispersion=Date de sortie
+commDisp=Commentaire sortie
+sortie=Sortie
 origine=Origine
+# enum ReineOrigine
+AEC=AEC Achat Essaim sur cadre
+AEN=AEN Achat Essaim nu
+ARF=ARF Achat reine
+ARV=ARV Achat reine vierge
+ENN=ENN Essaim naturel
+ENB=ENB Essaim naturel bâti
+AUR=AUR Auto enruchement
+EAN=EAN Essaim artificiel avec élevage naturel
+CRD=CRD Cellule royale dix jours
+CR3=CR3 Cellule royale 3 jours
+CR0=CR0 Cellule royale 0 jour
+RVN=RVN Reine vierge
+CRE=CRE Cellule de réémergence
+ESS=ESS Essaimage
+SUP=SUP Supercédure
+SAU=SAU Sauveté
+# enum ReineSortie
+DES=DES Désertion
+ESS=ESS Essaimage
+FAM=FAM Famine
+DIS=DIS Dispersion
+DBR=DBR Dispersion bourdonneuse
+ECH=ECH Échec de l'élevage
+REM=REM Remérage
+BRD=BRD Bourdonneuse 
+MLD=MLD Maladie
+PST=PST Empoisonnement
+DIV=DIV Vol ou autre perte diverse
 
 # essaimGrapheEve.html
 ZoomIni=Zoom initial
