--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -34,24 +34,6 @@ ESSAIMDISPERSION=Swarm dispersing
 RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 
-# enum essaim/ReineOrigine.java
-AEC=AEC Swarm on frame purchased
-AEN=AEN Bare swarm purchased
-ARF=ARF Queen purchased
-ARV=ARV Bare queen purchased
-ENN=ENN Natural swarm
-ENB=ENB Natural swarm with honeycomb
-AUR=AUR Self inhive
-EAN=EAN Artificial swarm with natural breeding
-CRD=CRD Royal cell ten days
-CR3=CR3 Royal cell three days
-CR0=CR0 Royal cell zero day
-RVN=RVN Bare queen
-CRE=CRE Re-emergence cell
-ESS=ESS Swarming
-SUP=SUP Supercedure
-SAU=SAU Rescued
-
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
 PasDeRucheCree=No hive created
@@ -235,9 +217,39 @@ ArbreInactif=Inactive tree
 EssaimsProd=Swarms production
 
 # essaimForm.html
-dateDispersion=Dispersion date
-commDisp=Dispersion comment
+dateDispersion=Exit date
+commDisp=Exit comment
+sortie=Exit
 origine=Origin
+# enum ReineOrigine
+AEC=AEC Swarm on frame purchased
+AEN=AEN Bare swarm purchased
+ARF=ARF Queen purchased
+ARV=ARV Bare queen purchased
+ENN=ENN Natural swarm
+ENB=ENB Natural swarm with honeycomb
+AUR=AUR Self inhive
+EAN=EAN Artificial swarm with natural breeding
+CRD=CRD Royal cell ten days
+CR3=CR3 Royal cell three days
+CR0=CR0 Royal cell zero day
+RVN=RVN Bare queen
+CRE=CRE Re-emergence cell
+ESS=ESS Swarming
+SUP=SUP Supercedure
+SAU=SAU Rescued
+# enum ReineSortie
+DES=DES Desertion
+ESS=ESS Swarming
+FAM=FAM Famine
+DIS=DIS Dispersion
+DBR=DBR Dispersion buzzy
+ECH=ECH Breeding failure
+REM=REM Remerage
+BRD=BRD Buzzy 
+MLD=MLD Disease
+PST=PST Poisoning
+DIV=DIV Theft or other miscellaneous loss
 
 # essaimGrapheEve.html
 ZoomIni=Initial zoom
