infos.html ajouté nb essaims par Origine

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -152,6 +152,7 @@ nbInterv=Nb jours intervention
 ElementActifUniq=Éléments actifs uniquement :
 NbRuchesAcq=Nb ruches acquisition
 NbHaussesAcq=Nb hausses acquisition
+origine=origine
 
 # Templates commun
 sep=\u0020/\u0020
@@ -220,7 +221,7 @@ EssaimsProd=Essaims production
 dateDispersion=Date de sortie
 commDisp=Commentaire sortie
 sortie=Sortie
-origine=Origine
+Origine=Origine
 # enum ReineOrigine
 AEC=AEC Achat Essaim sur cadre
 AEN=AEN Achat Essaim nu
