--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -152,6 +152,7 @@ nbInterv=Nb of days of intervention
 ElementActifUniq=Active elements only :
 NbRuchesAcq=Nb acquired hives
 NbHaussesAcq=Nb acquired supers
+origine=origin
 
 # Templates commun
 sep=\u0020/\u0020
@@ -220,7 +221,7 @@ EssaimsProd=Swarms production
 dateDispersion=Exit date
 commDisp=Exit comment
 sortie=Exit
-origine=Origin
+Origine=Origin
 # enum ReineOrigine
 AEC=AEC Swarm on frame purchased
 AEN=AEN Bare swarm purchased
