rucherDetail.html Ajout popover sur latitude et distance

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -701,6 +701,8 @@ ProductionRecolte=Production par récolte
 ruchersProdRecolte=Ruchers statistiques de production
 
 # rucher/rucherDetail.html
+AppelAppCarto=Appel d'une application cartographique
+ToutesDistances=Afficher toutes les distances
 nbXRecoltes={0} récolte(s)
 temps=Temps
 Pasderuche=Pas de ruche dans ce rucher
