--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -701,6 +701,8 @@ ProductionRecolte=Production per harvest
 ruchersProdRecolte=Apiaries production statistics
 
 # rucher/rucherDetail.html
+AppelAppCarto=Call to a map application
+ToutesDistances=Show all distances
 nbXRecoltes={0} harvest(s)
 temps=Time
 Pasderuche=No hive in this apiary
