infos.html mis élémants actifs dans accordéon, ajouté inactifs

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -149,7 +149,8 @@ essaimDateNaissSupAcquis=essaim(s) date naissance reine supérieure à date acqu
 ruchesInactPasDepot=ruche(s) inactives qui ne sont pas au dépôt
 nbIntervRucher=Nb jours intervention par rucher
 nbInterv=Nb jours intervention
-ElementActifUniq=Éléments actifs uniquement :
+ElementActifUniq=Éléments actifs uniquement
+ElementInActifUniq=Éléments inactifs uniquement
 NbRuchesAcq=Nb ruches acquisition
 NbHaussesAcq=Nb hausses acquisition
 origine=origine
