--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -149,7 +149,8 @@ essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisit
 ruchesInactPasDepot=inactive hive(s) not at the depot
 nbIntervRucher=Nb of days of intervention per apiary
 nbInterv=Nb of days of intervention
-ElementActifUniq=Active elements only :
+ElementActifUniq=Active elements only
+ElementInActifUniq=Inactive elements only
 NbRuchesAcq=Nb acquired hives
 NbHaussesAcq=Nb acquired supers
 origine=origin
