infos.html ajouté accordéon Inactifs uniquement

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -154,6 +154,8 @@ ElementInActifUniq=Éléments inactifs uniquement
 NbRuchesAcq=Nb ruches acquisition
 NbHaussesAcq=Nb hausses acquisition
 origine=origine
+sortie=sortie
+essaimsInactifs=essaims inactifs
 
 # Templates commun
 sep=\u0020/\u0020
@@ -221,7 +223,7 @@ EssaimsProd=Essaims production
 # essaimForm.html
 dateDispersion=Date de sortie
 commDisp=Commentaire sortie
-sortie=Sortie
+Sortie=Sortie
 Origine=Origine
 # enum ReineOrigine
 AEC=AEC Achat Essaim sur cadre
