--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -154,6 +154,8 @@ ElementInActifUniq=Inactive elements only
 NbRuchesAcq=Nb acquired hives
 NbHaussesAcq=Nb acquired supers
 origine=origin
+sortie=exit
+essaimsInactifs=Inactives swarm
 
 # Templates commun
 sep=\u0020/\u0020
@@ -221,7 +223,7 @@ EssaimsProd=Swarms production
 # essaimForm.html
 dateDispersion=Exit date
 commDisp=Exit comment
-sortie=Exit
+Sortie=Exit
 Origine=Origin
 # enum ReineOrigine
 AEC=AEC Swarm on frame purchased
