infos.html affichage des pourcentages des origines et sorties

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -155,7 +155,7 @@ NbRuchesAcq=Nb ruches acquisition
 NbHaussesAcq=Nb hausses acquisition
 origine=origine
 sortie=sortie
-essaimsInactifs=essaims inactifs
+essaims=essaims
 
 # Templates commun
 sep=\u0020/\u0020
