--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -155,7 +155,7 @@ NbRuchesAcq=Nb acquired hives
 NbHaussesAcq=Nb acquired supers
 origine=origin
 sortie=exit
-essaimsInactifs=Inactives swarm
+essaims=swarms
 
 # Templates commun
 sep=\u0020/\u0020
