essaimDetail.html ajout popup sur dateAcquisition : durée ans, jours

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -410,6 +410,8 @@ essaimPasRuche=Cet essaim n'est pas dans une ruche
 histoRucheRucher=Historique ruche/rucher
 derniersEve=Derniers événements
 GrapheEve=Graphique des événements
+annee_s=année(s)
+jour_s=jour(s)
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Inactive l'essaim, met à jour la date et le commentaire de dispersion. Retire l'essaim de sa ruche.<br/>Si demandés : déplace la ruche au rucher dépôt et crée en événement 0 cadre.<br/>Si remérage demandé : remplace l'essaim dispersé par un autre.
