--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -410,6 +410,8 @@ essaimPasRuche=This swarm is not in a hive
 histoRucheRucher=History hive/apiary
 derniersEve=Last events
 GrapheEve=Event graph
+annee_s=year(s)
+jour_s=day(s)
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Inactivates the swarm, updates the dispersal date and comment. Remove the swarm from its hive.<br/>If requested: moves the hive to the depot apiary and creates a 0 frame event.<br/>If new queen requested: replaces the dispersed swarm with another.
