ages des reines, ajouté option actif true/false

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -286,6 +286,8 @@ ageDesReines=Âge des reines
 nbReinesTotal=Nombre de reines Total
 jours=jours
 Reines=Reines
+Graphique=Graphique
+Naissance=Naissance
 #EnCouveuse=Pas née
 #horsRuche=Hors ruche
 
