--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -286,6 +286,8 @@ ageDesReines=Age of queens
 nbReinesTotal=Number of queens Total
 jours=days
 Reines=Queens
+Graphique=Chart
+Naissance=Birth
 #EnCouveuse=Not born
 #horsRuche=Outside the hive
 
