EssaimService.java ajouté @Value. inactives type de sorties à ignorer

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -283,7 +283,7 @@ EcartType= Écart type
 MoyenneE=Moyenne essaim
 EcartTypeE= Écart type essaim
 ageDesReines=Âge des reines
-nbReinesTotal=Nombre de reines Total
+nbReines=Nombre de reines
 jours=jours
 Reines=Reines
 Graphique=Graphique
