--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -283,7 +283,7 @@ EcartType= Standard deviation
 MoyenneE=Swarm Mean
 EcartTypeE= Swarm Standard deviation
 ageDesReines=Age of queens
-nbReinesTotal=Number of queens Total
+nbReines=Number of queens
 jours=days
 Reines=Queens
 Graphique=Chart
