Type de traitements, fini.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -34,6 +34,15 @@ ESSAIMDISPERSION=Dispersion de l'essaim
 RUCHEPESEE=Poids de la ruche
 RUCHECADRE=Cadres de la ruche
 
+# enum evenement/TypeTraitement
+AMI=Languette Amitraze (Apivar)
+API=Languette Tau-fluvalinate (Apistan)
+AOD=Acide oxalique par dégouttement
+AOS=Acide oxalique par sublimation  
+AOL=Acide oxalique en languettes
+VAR=Varromed
+FOR=Acide formique
+
 # ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
 PasDeRucheCree=Pas de ruche créée
@@ -226,34 +235,34 @@ commDisp=Commentaire sortie
 Sortie=Sortie
 Origine=Origine
 # enum ReineOrigine
-AEC=AEC Achat Essaim sur cadre
-AEN=AEN Achat Essaim nu
-ARF=ARF Achat reine
-ARV=ARV Achat reine vierge
-ENN=ENN Essaim naturel
-ENB=ENB Essaim naturel bâti
-AUR=AUR Auto enruchement
-EAN=EAN Essaim artificiel avec élevage naturel
-CRD=CRD Cellule royale dix jours
-CR3=CR3 Cellule royale 3 jours
-CR0=CR0 Cellule royale 0 jour
-RVN=RVN Reine vierge
-CRE=CRE Cellule de réémergence
-ESS=ESS Essaimage
-SUP=SUP Supercédure
-SAU=SAU Sauveté
+AEC=Achat essaim sur cadre
+AEN=Achat essaim nu
+ARF=Achat reine
+ARV=Achat reine vierge
+ENN=Essaim naturel
+ENB=Essaim naturel bâti
+AUR=Auto enruchement
+EAN=Essaim artificiel avec élevage naturel
+CRD=Cellule royale dix jours
+CR3=Cellule royale 3 jours
+CR0=Cellule royale 0 jour
+RVN=Reine vierge
+CRE=Cellule de réémergence
+ESS=Essaimage
+SUP=Supercédure
+SAU=Sauveté
 # enum ReineSortie
-DES=DES Désertion
-ESS=ESS Essaimage
-FAM=FAM Famine
-DIS=DIS Dispersion
-DBR=DBR Dispersion bourdonneuse
-ECH=ECH Échec de l'élevage
-REM=REM Remérage
-BRD=BRD Bourdonneuse 
-MLD=MLD Maladie
-PST=PST Empoisonnement
-DIV=DIV Vol ou autre perte diverse
+DES=Désertion
+ESS=Essaimage
+FAM=Famine
+DIS=Dispersion
+DBR=Dispersion bourdonneuse
+ECH=Échec de l'élevage
+REM=Remérage
+BRD=Bourdonneuse 
+MLD=Maladie
+PST=Empoisonnement
+DIV=Vol ou autre perte diverse
 
 # essaimGrapheEve.html
 ZoomIni=Zoom initial
@@ -339,6 +348,9 @@ ajoutSucreLot=Ajout de sucre au lot
 
 # essaim/essaimCadreLotForm.html
 cadreLot=Ajout d'événments cadre au lot
+
+# essaim/essaimTraitementLotForm.html
+Traitement=Traitement
 
 # essaim/essaimTraitementLotForm.html
 traitementLot=Traitement Varroa du lot
