--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -34,6 +34,15 @@ ESSAIMDISPERSION=Swarm dispersing
 RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 
+# enum evenement/TypeTraitement
+AMI=Amitraz Tab (Apivar)
+API=Tau-fluvalinate tab (Apistan)
+AOD=Oxalic Acid by dripping
+AOS=Oxalic Acid by sublimation  
+AOL=Oxalic Acid in tabs
+VAR=Varromed
+FOR=Formic acid
+
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
 PasDeRucheCree=No hive created
@@ -226,34 +235,34 @@ commDisp=Exit comment
 Sortie=Exit
 Origine=Origin
 # enum ReineOrigine
-AEC=AEC Swarm on frame purchased
-AEN=AEN Bare swarm purchased
-ARF=ARF Queen purchased
-ARV=ARV Bare queen purchased
-ENN=ENN Natural swarm
-ENB=ENB Natural swarm with honeycomb
-AUR=AUR Self inhive
-EAN=EAN Artificial swarm with natural breeding
-CRD=CRD Royal cell ten days
-CR3=CR3 Royal cell three days
-CR0=CR0 Royal cell zero day
-RVN=RVN Bare queen
-CRE=CRE Re-emergence cell
-ESS=ESS Swarming
-SUP=SUP Supercedure
-SAU=SAU Rescued
+AEC=Swarm on frame purchased
+AEN=Bare swarm purchased
+ARF=Queen purchased
+ARV=Bare queen purchased
+ENN=Natural swarm
+ENB=Natural swarm with honeycomb
+AUR=Self inhive
+EAN=Artificial swarm with natural breeding
+CRD=Royal cell ten days
+CR3=Royal cell three days
+CR0=Royal cell zero day
+RVN=Bare queen
+CRE=Re-emergence cell
+ESS=Swarming
+SUP=Supercedure
+SAU=Rescued
 # enum ReineSortie
-DES=DES Desertion
-ESS=ESS Swarming
-FAM=FAM Famine
-DIS=DIS Dispersion
-DBR=DBR Dispersion buzzy
-ECH=ECH Breeding failure
-REM=REM Remerage
-BRD=BRD Buzzy 
-MLD=MLD Disease
-PST=PST Poisoning
-DIV=DIV Theft or other miscellaneous loss
+DES=Desertion
+ESS=Swarming
+FAM=Famine
+DIS=Dispersion
+DBR=Dispersion buzzy
+ECH=Breeding failure
+REM=Remerage
+BRD=Buzzy 
+MLD=Disease
+PST=Poisoning
+DIV=Theft or other miscellaneous loss
 
 # essaimGrapheEve.html
 ZoomIni=Initial zoom
@@ -339,6 +348,9 @@ ajoutSucreLot=Add sugar to the batch
 
 # essaim/essaimCadreLotForm.html
 cadreLot=Adding frame events to the batch
+
+# essaim/essaimTraitementLotForm.html
+Traitement=Treatment
 
 # essaim/essaimTraitementLotForm.html
 traitementLot=Batch Varroa treatment 
