essaimTraitementListe ajout option "Grouper"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -466,6 +466,7 @@ evenementscomm=Événements commentaire
 # evenement/evenementTraitementListe.html
 evenementstraitement=Événements traitement
 eveDebutTraitement=Début traitement
+TraitementDebutFin=Début et fin de traitements
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
