--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -466,6 +466,7 @@ evenementscomm=Comment events
 # evenement/evenementTraitementListe.html
 evenementstraitement=Treatment events
 eveDebutTraitement=Treatment start
+TraitementDebutFin=Start and end of treatments
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Hive weight events
