evenemtTraitementListe.html correction label et amélioration tooltip

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -466,6 +466,7 @@ evenementscomm=Événements commentaire
 # evenement/evenementTraitementListe.html
 evenementstraitement=Événements traitement
 eveDebutTraitement=Début traitement
+TraitementDebutFin=Afficher les événements de début et fin de traitement
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
