evenementTraitementListe.html tooltip sur Grouper

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -467,6 +467,7 @@ evenementscomm=Événements commentaire
 evenementstraitement=Événements traitement
 eveDebutTraitement=Début traitement
 TraitementDebutFin=Afficher les événements de début et fin de traitement
+GrouperTrt=Grouper par jour, rucher, début ou fin, et type de traitement 
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
