--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -467,6 +467,7 @@ evenementscomm=Comment events
 evenementstraitement=Treatment events
 eveDebutTraitement=Treatment start
 TraitementDebutFin=Show start and end of treatment events
+GrouperTrt=Group by day, apiary, start or end, and type of treatment 
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Hive weight events
