evenementSucre Grouper, infobulle et doc

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -459,6 +459,7 @@ evenement=Événement
 
 # evenement/evenementSucreListe.html
 evenementssucre=Événements sucre
+GrouperSucre=Grouper par jour et par rucher
 
 # evenement/evenementCommentListe.html
 evenementscomm=Événements commentaire
@@ -467,7 +468,7 @@ evenementscomm=Événements commentaire
 evenementstraitement=Événements traitement
 eveDebutTraitement=Début traitement
 TraitementDebutFin=Afficher les événements de début et fin de traitement
-GrouperTrt=Grouper par jour, rucher, début ou fin, et type de traitement 
+GrouperTrt=Grouper par jour, rucher, début ou fin, et type de traitement
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
