--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -459,6 +459,7 @@ evenement=Event
 
 # evenement/evenementSucreListe.html
 evenementssucre=Sugar events
+GrouperSucre=Group by day and apiary
 
 # evenement/evenementCommentListe.html
 evenementscomm=Comment events
