liste des événements Ajout essaim ruche avec option grouper

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -68,6 +68,7 @@ urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
 
 # navbar.html
 PoseRetraitHausse=Pose/Retrait hausse
+EssaimRuche=Essaim Ruche
 
 # include.html
 liste=Liste
@@ -461,6 +462,10 @@ evenement=Événement
 evenementssucre=Événements sucre
 GrouperSucre=Grouper par jour et par rucher
 
+# evenement/evenementEssaimRucheListe.html
+GrouperEssaimRuche=Grouper par essaim
+evenementsessaimruche=Événements ajout essaim ruche
+
 # evenement/evenementCommentListe.html
 evenementscomm=Événements commentaire
 
@@ -487,6 +492,9 @@ provenance=Provenance
 
 # evenement/evenementPoseHausse.html
 evtsPoseRetraitHausses=Événements pose/retrait hausse
+
+# evenement/evenementPoseHausse.html
+evtsAjouteEssaimRuche=Événements ajoute essaim ruche
 
 # evenement/evenementForm.html
 ajouterEvenement=Ajouter un événement
