--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -68,6 +68,7 @@ urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
 
 # navbar.html
 PoseRetraitHausse=Pose/Remove super
+EssaimRuche=Swarm Hive
 
 # include.html
 liste=List
@@ -461,6 +462,10 @@ evenement=Event
 evenementssucre=Sugar events
 GrouperSucre=Group by day and apiary
 
+# evenement/evenementEssaimRucheListe.html
+GrouperEssaimRuche=Group by swarm
+evenementsessaimruche=Swarm add to hive events
+
 # evenement/evenementCommentListe.html
 evenementscomm=Comment events
 
@@ -487,6 +492,9 @@ provenance=From
 
 # evenement/evenementPoseHausse.html
 evtsPoseRetraitHausses=Pose/removal super events
+
+# evenement/evenementPoseHausse.html
+evtsAjouteEssaimRuche=Événements ajoute essaim ruche
 
 # evenement/evenementForm.html
 ajouterEvenement=Add event
