infos.html ajout nombre d'événements par type

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -166,6 +166,7 @@ NbHaussesAcq=Nb hausses acquisition
 origine=origine
 sortie=sortie
 essaims=essaims
+NbEve=Nb événements
 
 # Templates commun
 sep=\u0020/\u0020
