--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -166,6 +166,7 @@ NbHaussesAcq=Nb acquired supers
 origine=origin
 sortie=exit
 essaims=swarms
+NbEve=Nb events
 
 # Templates commun
 sep=\u0020/\u0020
