transhumances option affichage retrait vers Dépôt

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -777,6 +777,7 @@ grouper=Grouper
 grouperJour=Grouper par jour
 Ajout=Ajout
 Retrait=Retrait
+afficherDepot=Afficher les mouvements au dêpôt
 
 # rucher/rucherDetailIgn.html
 calculEnCours=Calcul en cours...
