--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -777,6 +777,7 @@ grouper=Group
 grouperJour=Group by day
 Ajout=Addition
 Retrait=Withdrawal
+afficherDepot=Show deposit movements
 
 # rucher/rucherDetailIgn.html
 calculEnCours=Calculation in progress...
