messages libellés enum reine origine

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -239,9 +239,9 @@ Origine=Origine
 # enum ReineOrigine
 AEC=Achat essaim sur cadre
 AEN=Achat essaim nu
-ARF=Achat reine
+ARF=Achat reine fécondée
 ARV=Achat reine vierge
-ENN=Essaim naturel
+ENN=Essaim naturel nu
 ENB=Essaim naturel bâti
 AUR=Auto enruchement
 EAN=Essaim artificiel avec élevage naturel
