--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -239,9 +239,9 @@ Origine=Origin
 # enum ReineOrigine
 AEC=Swarm on frame purchased
 AEN=Bare swarm purchased
-ARF=Queen purchased
+ARF=Fertilized queen purchased
 ARV=Bare queen purchased
-ENN=Natural swarm
+ENN=Bare natural swarm
 ENB=Natural swarm with honeycomb
 AUR=Self inhive
 EAN=Artificial swarm with natural breeding
