sorties essaims, pertes diverses au pluriel

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -264,7 +264,7 @@ REM=Remérage
 BRD=Bourdonneuse 
 MLD=Maladie
 PST=Empoisonnement
-DIV=Vol ou autre perte diverse
+DIV=Vol ou autres pertes diverses
 
 # essaimGrapheEve.html
 ZoomIni=Zoom initial
