--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -264,7 +264,7 @@ REM=Remerage
 BRD=Buzzy 
 MLD=Disease
 PST=Poisoning
-DIV=Theft or other miscellaneous loss
+DIV=Theft or other miscellaneous losses
 
 # essaimGrapheEve.html
 ZoomIni=Initial zoom
